--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
 # Add members from your group here - Will automatically get emails when there is a new pull request
-* @katrineHoey @team-member
+* @KatrineHoey @team-member
 * @turganscp @team-member
